[package]
name = "qutonium"
version = "0.1.6"
authors = ["monsieurbadia <contact@monsieurbadia.com>"]
description = "simplify unit testing with a functional testing framework 📈 "
homepage = "https://github.com/qurity"
repository = "https://github.com/qurity/qutonium"
readme = "README.md"
license = "MIT"
edition = "2018"

exclude = [
  "doc/**/*",
  "examples/**/*",
  "tmp/**/*",
  "target/**/*",
  "tests/**/*",
  "Cargo.lock",
]

keywords = [
  "testing",
  "framework",
  "qutonium",
]

categories = [
  "development-tools::testing",
]

[dependencies]
miniserde = "0.1.13"
qute = "0.0.11"

[lib]
name = "qutonium"
doctest = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
